<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/langit"
    tools:context=".MoveForResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_color"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-black"
        android:textSize="20dp"
        android:layout_marginTop="@dimen/activity_bottom_margin"
        android:layout_marginBottom="@dimen/activity_bottom_margin"
        android:id="@+id/tv_choose_color"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tv_choose_color"
        android:id="@+id/rg_color">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            android:text="@string/green"
            android:textColor="@color/white"
            android:id="@+id/rb_green"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/rb_blue"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
            android:textColor="@color/white"
            android:textSize="17dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:id="@+id/rb_red"/>
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:layout_below="@id/rg_color"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_choose"/>

</RelativeLayout>